[package]
name = "weblock"
version = "0.1.0"
edition = "2024"
author = "unsecretised"
license = "MIT"
description = "A lightweight http proxy for putting a password onto your selfhosted apps"
readme = "README.md"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
openssl = "0.10.77"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["auth", "cors", "fs", "validate-request"] }
